started cultural impact section

--- a/owt.html
+++ b/owt.html
@@ -84,6 +84,7 @@
                         <li class="fragment">&lt;blink&gt; tag</li>
                         <li class="fragment">Legacy software dependencies: Flash, Java, Shockwave, etc…</li>
                         <li class="fragment">Live Leaks impossible</li>
+                        <li class="fragment">Effectivity of emulation approach: a dozen containers for millions of web pages</li>
                     </ul>
                 </section>
 
@@ -142,8 +143,40 @@
                     </ul>
                 </section>
 
+                <!-- Cultural Impact -->
+
                 <section>
-                    
+                    <h2>Cultural Impact</h2>
+                </section>
+
+                <section>
+                    <h3>The web as performative media</h3>
+                </section>
+
+                <section>
+                    <section>
+                        <p><i>oldweb.today</i> makes the variability of the web <a href="http://archive.rhizome.org/oldweb.today/">tangible</a>.</p>
+                    </section>
+
+                    <section>
+                        <img src="img/scrollbars-01.png">
+                    </section>
+                    <section>
+                        <img src="img/scrollbars-02.png">
+                    </section>
+                    <section>
+                        <img src="img/scrollbars-03.png">
+                    </section>
+                </section>
+
+                <section>
+                    <section>
+                        <p>The web has, since the advent of client-side scripting in 1995, been a <a href="http://oldweb.today/nsmac3/20000405085814/http://archive.rhizome.org/artbase/1722/eicon.html">software delivery system</a> rather than a document delivery system.</p>
+                    </section>
+
+                    <section>
+                    <img src="img/java-applet.png">
+                    </section>
                 </section>
 
 			</div>
