--- a/owt.html
+++ b/owt.html
@@ -159,7 +159,7 @@
                 </section>
                 
                 <section>
-                    <h3>Differences from other Emulation Frameworks</h3>
+                    <h3>Differences from other<br/> Emulation Frameworks</h3>
                     <ul>
                         <li class="fragment">Designed specifically for web archives</li>
                         <li class="fragment">The browser is the platform for web pages</li>
@@ -172,9 +172,9 @@
                     <h3>Web (HTTP) emulation</h3>
                     <ul>
                         <li class="fragment">Not general Internet emulation</li>
-                        <li class="fragment">HTTP changed since original 1.0 release</li>
-                        <li class="fragment">HTTP supports routing all traffic through a <i>Proxy Server</i></li>
-                        <li class="fragment">A<i>Proxy Server</i> can be used to serve archived content.</li>
+                        <li class="fragment">HTTP hasn't changed much since 1.0 release</li>
+                        <li class="fragment">HTTP can route all traffic through a <i>Proxy Server</i></li>
+                        <li class="fragment">A<i>Proxy Server</i> can be used to serve archived content</li>
                         <li class="fragment">Difficult to configure manually just to view an archive...</li>
                         <li class="fragment">...but easy if pre-configured in a "container"</li>
                      </ul>
