mosaic and slac instead of geocities

--- a/owt.html
+++ b/owt.html
@@ -79,12 +79,12 @@
                 </section>
 
                 <section>
-                    <img src="img/geocities-ia.png">
+                    <img src="img/slac-chrome.png">
                 </section>
 
 
                 <section>
-                    <img src="img/geocities-owt.png">
+                    <img src="img/slac-mosaic.png">
                 </section>
 
                 <section>
