margin option set

--- a/owt.html
+++ b/owt.html
@@ -486,6 +486,7 @@
                 progress: true,
                 history: true,
                 center: true,
+                margin: 0.05,
 
                 transition: 'slide', // none/fade/slide/convex/concave/zoom
 
